--- a/docs/assets/css/gengo.css
+++ b/docs/assets/css/gengo.css
@@ -1,11 +1,3 @@
-/*!
- * Copyright 2011-2014 Gengo, Inc.
- * * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at :
- * http://www.apache.org/licenses/LICENSE-2.0
- */
-
 .btn:active, .btn.active {
   background-image: none;
 }
@@ -712,23 +704,23 @@ a, .btn-link {
 }
 .developer .navbar .nav .active a,
 .developer .navbar .nav a:hover {
-  border-bottom-color: #ea5e47;
+  border-bottom-color: #1cad7e;
   background-color: white;
 }
 .developer .navbar .navbar-brand {
-  background-color: #ea5e47;
+  background-color: #1cad7e;
 }
 .developer .navbar .navbar-toggle .icon-bar {
   background-color: #fff;
 }
 @media (max-width: 768px) {
   .developer .customer .navbar {
-    background-color: #ea5e47;
+    background-color: #1cad7e;
   }
 }
 .developer .customer .navbar .nav a:hover,
 .developer .customer .navbar .nav .active a {
-  border-bottom-color: #ea5e47;
+  border-bottom-color: #1cad7e;
 }
 @media (max-width: 768px) {
   .developer .customer .navbar .nav a:hover,
@@ -737,7 +729,7 @@ a, .btn-link {
   }
 }
 .developer .customer .navbar .navbar-brand {
-  background-color: #ea5e47;
+  background-color: #1cad7e;
 }
 @media (max-width: 768px) {
   .developer .translator .navbar {
@@ -959,23 +951,23 @@ a, .btn-link {
 }
 .translator .navbar .nav .active a,
 .translator .navbar .nav a:hover {
-  border-bottom-color: #98d7cc;
+  border-bottom-color: #1cad7e;
   background-color: white;
 }
 .translator .navbar .navbar-brand {
-  background-color: #98d7cc;
+  background-color: #1cad7e;
 }
 .translator .navbar .navbar-toggle .icon-bar {
   background-color: #fff;
 }
 @media (max-width: 768px) {
   .translator .customer .navbar {
-    background-color: #98d7cc;
+    background-color: #1cad7e;
   }
 }
 .translator .customer .navbar .nav a:hover,
 .translator .customer .navbar .nav .active a {
-  border-bottom-color: #98d7cc;
+  border-bottom-color: #1cad7e;
 }
 @media (max-width: 768px) {
   .translator .customer .navbar .nav a:hover,
@@ -984,7 +976,7 @@ a, .btn-link {
   }
 }
 .translator .customer .navbar .navbar-brand {
-  background-color: #98d7cc;
+  background-color: #1cad7e;
 }
 @media (max-width: 768px) {
   .translator .translator .navbar {
@@ -1206,23 +1198,23 @@ a, .btn-link {
 }
 .admin .navbar .nav .active a,
 .admin .navbar .nav a:hover {
-  border-bottom-color: #4d4843;
+  border-bottom-color: #1cad7e;
   background-color: white;
 }
 .admin .navbar .navbar-brand {
-  background-color: #4d4843;
+  background-color: #1cad7e;
 }
 .admin .navbar .navbar-toggle .icon-bar {
   background-color: #fff;
 }
 @media (max-width: 768px) {
   .admin .customer .navbar {
-    background-color: #4d4843;
+    background-color: #1cad7e;
   }
 }
 .admin .customer .navbar .nav a:hover,
 .admin .customer .navbar .nav .active a {
-  border-bottom-color: #4d4843;
+  border-bottom-color: #1cad7e;
 }
 @media (max-width: 768px) {
   .admin .customer .navbar .nav a:hover,
@@ -1231,7 +1223,7 @@ a, .btn-link {
   }
 }
 .admin .customer .navbar .navbar-brand {
-  background-color: #4d4843;
+  background-color: #1cad7e;
 }
 @media (max-width: 768px) {
   .admin .translator .navbar {
