--- a/scss/_icons.scss
+++ b/scss/_icons.scss
@@ -4,12 +4,12 @@
 @font-face {
   font-weight: normal;
   font-style: normal;
-  font-family: 'gicons';
-  src:url('../fonts/gicons.eot?-3uz68h');
-  src:url('../fonts/gicons.eot?#iefix-3uz68h') format('embedded-opentype'),
-    url('../fonts/gicons.woff?-3uz68h') format('woff'),
-    url('../fonts/gicons.ttf?-3uz68h') format('truetype'),
-    url('../fonts/gicons.svg?-3uz68h#gicons') format('svg');
+  font-family: 'icomoon';
+  src:url('../fonts/icomoon.eot?-3uz68h');
+  src:url('../fonts/icomoon.eot?#iefix-3uz68h') format('embedded-opentype'),
+    url('../fonts/icomoon.woff?-3uz68h') format('woff'),
+    url('../fonts/icomoon.ttf?-3uz68h') format('truetype'),
+    url('../fonts/icomoon.svg?-3uz68h#icomoon') format('svg');
 }
 
 [class^="icon-"], [class*=" icon-"] {
@@ -17,7 +17,7 @@
   font-weight: normal;
   font-style: normal;
   font-variant: normal;
-  font-family: 'gicons';
+  font-family: 'icomoon';
   line-height: 1;
   speak: none;
 
@@ -28,13 +28,16 @@
 }
 
 .icon-funnel:before {
-  content: "\79";
+  content: "\59";
 }
-.icon-filter:before {
-  content: "\79";
+.icon-validation:before {
+  content: "\56";
+}
+.icon-memory:before {
+  content: "\6d";
 }
 .icon-menu:before {
-  content: "\6d";
+  content: "\4e";
 }
 .icon-success:before {
   content: "\73";
@@ -42,8 +45,8 @@
 .icon-error:before {
   content: "\65";
 }
-.icon-fullscreen:before {
-  content: "\2b";
+.icon-expand:before {
+  content: "\2e";
 }
 .icon-vertical:before {
   content: "\76";
@@ -51,44 +54,38 @@
 .icon-user:before {
   content: "\75";
 }
-.icon-memory:before {
-  content: "\4d";
-}
-.icon-preferences:before {
-  content: "\70";
-}
 .icon-settings:before {
-  content: "\70";
+  content: "\53";
 }
 .icon-refresh:before {
   content: "\72";
 }
 .icon-tooltip:before {
-  content: "\74";
+  content: "\71";
 }
 .icon-previous:before {
-  content: "\3e";
+  content: "\3c";
 }
 .icon-check:before {
   content: "\63";
 }
 .icon-close:before {
-  content: "\43";
+  content: "\78";
 }
-.icon-messages:before {
-  content: "\e60d";
+.icon-message:before {
+  content: "\4d";
 }
-.icon-comments:before {
-  content: "\e60d";
+.icon-comment:before {
+  content: "\4d";
 }
 .icon-global:before {
   content: "\67";
 }
 .icon-next:before {
-  content: "\e60f";
+  content: "\3e";
 }
 .icon-minimize:before {
-  content: "\2d";
+  content: "\2c";
 }
 .icon-info:before {
   content: "\69";
@@ -97,16 +94,13 @@
   content: "\68";
 }
 .icon-trash:before {
-  content: "\54";
-}
-.icon-delete:before {
-  content: "\54";
-}
-.icon-funnel2:before {
-  content: "\66";
+  content: "\64";
 }
 .icon-search:before {
-  content: "\53";
+  content: "\66";
+}
+.icon-find:before {
+  content: "\66";
 }
 .icon-share:before {
   content: "\2f";
@@ -115,16 +109,16 @@
   content: "\46";
 }
 .icon-create:before {
-  content: "\6e";
+  content: "\43";
 }
-.icon-news:before {
-  content: "\4e";
+.icon-notification:before {
+  content: "\6e";
 }
 .icon-activity:before {
   content: "\61";
 }
 .icon-unlocked:before {
-  content: "\4c";
+  content: "\55";
 }
 .icon-locked:before {
   content: "\6c";
@@ -133,28 +127,25 @@
   content: "\62";
 }
 .icon-transfer:before {
-  content: "\23";
+  content: "\54";
 }
 .icon-start:before {
-  content: "\47";
+  content: "\5f";
 }
 .icon-play:before {
   content: "\50";
 }
 .icon-file:before {
-  content: "\64";
-}
-.icon-doc:before {
-  content: "\64";
+  content: "\3a";
 }
 .icon-download:before {
   content: "\44";
 }
 .icon-star:before {
-  content: "\2a";
+  content: "\3b";
 }
 .icon-print:before {
-  content: "\5f";
+  content: "\70";
 }
 .icon-email:before {
   content: "\45";
@@ -163,5 +154,5 @@
   content: "\41";
 }
 .icon-edit:before {
-  content: "\3a";
+  content: "\21";
 }
