comment out for now... sorry @toshipon

--- a/scss/gengo.scss
+++ b/scss/gengo.scss
@@ -13,21 +13,21 @@ $brand-color: $brand-customer;
 @import "navbar";
 
 // Designs for Developer pages
-.developer {
-  $brand-color: $brand-developer;
-  @import "navbar";
-}
+// .developer {
+//   $brand-color: $brand-developer;
+//   @import "navbar";
+// }
 
 // Styles for Translator pages
-.translator {
-  $brand-color: $brand-translator;
-  @import "navbar";
-}
+// .translator {
+//   $brand-color: $brand-translator;
+//   @import "navbar";
+// }
 
 // Styles for Admin pages
-.admin {
-  $brand-color: $brand-admin;
-  @import "navbar";
-}
+// .admin {
+//   $brand-color: $brand-admin;
+//   @import "navbar";
+// }
 
 body {}
