--- a/css/gengo.css
+++ b/css/gengo.css
@@ -632,19 +632,15 @@ a, .btn-link {
   font-size: 12px;
   line-height: 12px;
 }
-.workbench .navbar .nav li > .icon-funnel {
-  padding-top: 17.5px !important;
-  padding-bottom: 16.5px !important;
-  font-size: 13px;
-  line-height: 13px;
-}
+.workbench .navbar .nav li > .icon-funnel,
 .workbench .navbar .nav li > .icon-comment {
-  padding-top: 16.5px !important;
-  padding-bottom: 15.5px !important;
-  font-size: 15px;
-  line-height: 15px;
+  padding-top: 17px !important;
+  padding-bottom: 16px !important;
+  font-size: 14px;
+  line-height: 14px;
 }
-.workbench .navbar .nav li > .icon-success {
+.workbench .navbar .nav li > .icon-validation,
+.workbench .navbar .nav li > .icon-memory {
   padding-top: 16px !important;
   padding-bottom: 15px !important;
   font-size: 16px;
