--- a/scss/_modals.scss
+++ b/scss/_modals.scss
@@ -15,7 +15,7 @@
   }
   .modal-header .modal-title {
     margin: 0;
-    font-weight: $semibold;
+    font-weight: $font-semibold;
     font-size: 28px;
     line-height: 36px;
   }
