--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -52,6 +52,10 @@ $font-family-serif:       Georgia, "Times New Roman", Times, serif !default;
 $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !default;
 $font-family-base:        $font-family-sans-serif !default;
 
+$font-normal:            400 !default;
+$font-semibold:          600 !default;
+$font-bold:              700 !default;
+
 $font-size-base:          14px !default;
 $font-size-large:         ceil(($font-size-base * 1.25)) !default; // ~18px
 $font-size-small:         ceil(($font-size-base * 0.85)) !default; // ~12px
