--- a/css/gengo.css
+++ b/css/gengo.css
@@ -246,11 +246,11 @@ a, .btn-link {
   content: "\4e";
 }
 
-.icon-success:before {
+.icon-success:before, .submitted .status-icon:before, .approved .status-icon:before {
   content: "\73";
 }
 
-.icon-error:before {
+.icon-error:before, .rejected .status-icon:before {
   content: "\65";
 }
 
@@ -440,6 +440,34 @@ a, .btn-link {
 .modal-content .modal-footer {
   padding: 0;
   border: 0;
+}
+
+.translating .status-icon {
+  color: #98d7cc;
+}
+
+.translated .status-icon {
+  color: #98d7cc;
+}
+
+.submitted .status-icon {
+  color: #b0d482;
+}
+
+.error .status-icon {
+  color: #ea5e47;
+}
+
+.revising .status-icon {
+  color: #e0da79;
+}
+
+.approved .status-icon {
+  color: #1cad7e;
+}
+
+.rejected .status-icon {
+  color: #ea5e47;
 }
 
 .navbar {
