--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -41,7 +41,7 @@ $brand-workbench:       $gengo-gray !default;
 $body-bg:               #F4F4F4 !default;
 $box-bg:                #FFFFFF !default;
 //** Global text color on `<body>`.
-$text-color:            $gengo-gray !default;
+$text-color:            #4C4643 !default;
 
 //** Global textual link color.
 $link-color:            $brand-primary !default;
