update Grunt build css files

--- a/css/gengo.css
+++ b/css/gengo.css
@@ -230,6 +230,18 @@ a, .btn-link {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-warning:before {
+  content: "\77";
+}
+
+.icon-half:before {
+  content: "\48";
+}
+
+.icon-circle:before {
+  content: "\6f";
+}
+
 .icon-funnel:before {
   content: "\59";
 }
